# My-IDE

./: README.md  SPEC.md  package-lock.json  package.json  vscode_web.html
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  fs.rs  git.rs  lib.rs  main.rs  terminal.rs
src-tauri/src/ai/: deepseek.rs  kimi.rs  mod.rs
src/css/: app.css
src/js/: ide.js
