[package]
name = "deepseek-ide"
version = "0.1.0"
description = "DeepSeek-powered AI IDE"
authors = ["you"]
edition = "2021"

[lib]
name = "deepseek_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = { version = "0.3", features = ["io"] }
walkdir = "2"
dirs = "5"
anyhow = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
